--- a/public/index.html
+++ b/public/index.html
@@ -12,43 +12,29 @@
   </head>
   <body>
 
-    <section class="max-width-940">
-      <div class="row">
-        <div class="column">
-          <h2>Bensholder</h2>
-          <p>
-            A simple placeholder with added Ben
-          </p>
-          <h3>Examples</h3>
-          <pre><code>
+    <section class="max-width-940 wrapper">
+      <div class="hero">
+        <h2>Bensholder</h2>
+        <p>
+          A simple placeholder with added Ben
+        </p>
+        <h3>Examples</h3>
+        <pre><code>
 http://placeholder.benadventure.club/width/height
 &lt;img src="http://placeholder.benadventure.club/200/300" /&gt;
-          </code></pre>
-        </div>
-
-        <div class="column column-70 text-center">
-          <img src="http://placeholder.benadventure.club/400/300" />
-        </div>
-
+        </code></pre>
       </div>
 
-      <div class="row">
-        <div class="column text-center">
-          <img src="http://placeholder.benadventure.club/120/100" />
-          <img src="http://placeholder.benadventure.club/100/100" />
-          <img src="http://placeholder.benadventure.club/220/150" />
-        </div>
+      <div class="image-box" style="background-image:url(http://placeholder.benadventure.club/200/300)"></div>
 
-        <div class="column text-center">
-          <img src="http://placeholder.benadventure.club/400/255" />
-        </div>
-
-        <div class="column text-center">
-          <img src="http://placeholder.benadventure.club/260/255" />
-        </div>
-
-
+      <div class="wrapper two-by-two">
+        <div class="image-box" style="background-image:url(http://placeholder.benadventure.club/120/100)"></div>
+        <div class="image-box" style="background-image:url(http://placeholder.benadventure.club/100/100)"></div>
+        <div class="image-box" style="background-image:url(http://placeholder.benadventure.club/220/150)"></div>
       </div>
+
+      <div class="image-box" style="background-image:url(http://placeholder.benadventure.club/400/255)"></div>
+      <div class="image-box" style="background-image:url(http://placeholder.benadventure.club/260/255)"></div>
 
     <section>
 
